# supercut

./: .gitignore  LICENSE  README.md  TODO.md  noxfile.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
changelog.d/: 20240405_233807_tamir.bahar_tests.md  20240406_225257_tamir.bahar_code_cleanup.md
src/supercut/: Supercut.tcss  edl.py  ffmpeg.py  mlt.py  subs.py  subtitles.py  supercut.py  tui.py  video_part.py  vlc.py
tests/: empty_test.py  subtitles_test.py
